lush (1.2.1-8+cvs20101229) experimental; urgency=low

  * Fresh upstream CVS snapshot -- might be the last one in lush 1.x
    series:
    - supports Renesas SH(sh4) (Closes: #574258). Thanks Nobuhiro Iwamatsu
      for the patch
  * debian/copyright: switched to DEP5 format
  * debian/compat,control: dh compat version 7
  * debian/control:
    - Policy boost to 3.9.1 (no changes seems to be due)

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 29 Dec 2010 14:47:07 -0500

lush (1.2.1-7+cvs20080204) unstable; urgency=medium

  * Fixed paths cvs20080204 so fresh versions of dpatch behave nicely
    (Closes: #608218). Thanks Jakub Wilk for reporting and Hideki Yamane
    for providing the fix
  * Added Vcs fields for easy debcheckout.  They point to freshly
    (re)initialized (using git-import-dscs --debsnapt) GIT repository
  * Added ${misc:Depends} to lush-library Depends (per lintian
    recommendations)

 -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 29 Dec 2010 11:45:37 -0500

lush (1.2.1-6+cvs20080204) unstable; urgency=low

  * Fresh CVS snapshot.
  * g77 -> gfortran, lapack3-dev -> liblapack-dev transition (Closes: #463966).
    Thanks Kumar Appaiah.
  * Homepage migrated into header field.
  * Changing versioing scheme to include CVS snapshot date into debian
    revision after + (instead of . which is used for NMUs)
  * Boosted standards to 3.7.3:
   - ${source:Version} instead of ${Source-Version}

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 04 Feb 2008 23:27:34 -0500

lush (1.2.1-5.cvs20070918) unstable; urgency=low

  * Semi-automated introduction of CVS snapshots to benefit having up-to-date
    LUSH before next release.

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 18 Sep 2007 01:28:20 -0400

lush (1.2.1-4) unstable; urgency=low

  * New maintainer. (Closes: #402989: ITA: lush -- Lisp Universal Shell
    Executable - Debian Bug report logs)
  * Moved copying of config.{sub,guess} under rule autotools, which has to be