@@ -8,6 +8,8 @@ lush (1.2.1-8+cvs20101229) experimental; urgency=low
   * debian/compat,control: dh compat version 7
   * debian/control:
     - Policy boost to 3.9.1 (no changes seems to be due)
+  * debian/patches,source,control: switch to 3.0 (quilt) source format
+    from dpatch
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Wed, 29 Dec 2010 14:47:07 -0500
 
